Fixed joins on commnets page

--- a/views/view-comments.handlebars
+++ b/views/view-comments.handlebars
@@ -1,7 +1,7 @@
 <h1>Post Details</h1>
 <div class="post-card">
   <h2>{{post.title}}</h2>
-  <p>Posted by: {{this.id}} on {{formatDate post.createdAt}}</p>
+  <p>Posted by: {{post.user.username}} on {{formatDate post.createdAt}}</p>
   <p>{{post.content}}</p>
 </div>
 
@@ -9,11 +9,10 @@
 {{#each post.comments}}
   <div class="card">
     <div class="card-header">
-      <p class="posted-by">Posted by: {{this.id}} on {{formatDate createdAt}}</p>
+      <p class="posted-by">Posted by: {{this.user.username}} on {{formatDate this.createdAt}}</p>
     </div>
     <div class="card-content">
       <p>{{this.comment_text}}</p>
     </div>
   </div>
 {{/each}}
-
