Removed log statements

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
 <div class="homepage">
   {{#each posts_data}}
-<h1>Post ID: {{this.id}}</h1>
+{{!-- <h1>Post ID: {{this.id}}</h1> --}}
     <div class="card">
       <div class="card-header">
         <div class="card-title-container">
