--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -12,7 +12,7 @@
         <p>{{this.content}}</p>
       </div>
       <div class="card-footer">
-        <a href="/view-comments/{{this.id}}">View Comments</a>
+        <a href="/view-comments/{{this.id}}" class="white-link">View Comments</a>
       </div>
     </div>
   {{/each}}
